test/typecheck/fail/infer_if_error.sail

let b : bool = true

let _ = if b then f() else g()